--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>mule-module-magento</artifactId>
 	<packaging>mule-module</packaging>
 	<name>Mule Magento Connector</name>
-	<version>2.3.0-M1</version>
+	<version>2.2.99</version>
 	<description>Mule Cloud connector to Magento</description>
 	<url>http://www.mulesoft.org/muleforge/magento-cloud-connector</url>
 
