--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>mule-module-magento</artifactId>
 	<packaging>mule-module</packaging>
 	<name>Mule Magento Connector</name>
-	<version>2.2.99</version>
+	<version>2.3.0-SCH</version>
 	<description>Mule Cloud connector to Magento</description>
 	<url>http://www.mulesoft.org/muleforge/magento-cloud-connector</url>
 
@@ -131,4 +131,16 @@
 		</repository>
 	</repositories>
 
+	<distributionManagement>
+		<repository>
+			<id>nexus.internal</id>
+			<name>Schibsted Releases</name>
+			<url>http://maven.schibsted.ws/nexus/content/repositories/releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>nexus.snapshots</id>
+			<name>Schibsted Snapshots</name>
+			<url>http://maven.schibsted.ws/nexus/content/repositories/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
